# parallel-processing

./: .gitignore  Readme.md  activate_env.sh  markdown.css  pyproject.toml  pyrightconfig.json
Assignment1/: Assignment1.py
Assignment2/: Assignment2.py
Assignment3/: Assignment3.py  README_Assignment3.md  requirements_a3.txt  test_assignment3.py
Assignment4/: Assignment4.py  README_Assignment4.md  test_assignment4.py
Assignment4/out_a4/: report.md  runtime.csv
out_a3/: report.md  runtime.csv
